--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
     "stripe": "^20.1.0",
+    "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
   },
